# comfyUI-Prompts-Selector

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
prompts/: boy.txt  girl.txt
