[project]
name = "prompts-selector"
description = "Quickly select preset prompts and merge them"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/S4MUEL-404/ComfyUI-Prompts-Selector"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Prompts-Selector"
Icon = ""
